# cookiecutter-conda-python

./: README.md  cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.repo_name}}/: .pre-commit-config.yaml  README.md  env.yml  pyproject.toml  setup.cfg  setup.py
{{cookiecutter.repo_name}}/tests/: conftest.py
